Some HTML cleanup
- Add opening HTML tag with "en" lang
- Remove extra tags
- Fix indentation (Not sure if we're going for 2 or 4 spaces so I just went with 4) feel free to change
- Add an extra title

--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-<head>
-    <link rel="shortcut icon" href="./assets/images/emc.png" type="image/x-icon">
-    <title>EasyMC</title>
-    <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">EasyMC</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="./Hexnicks/">RGB Nicknames</a></li>
-              <li><a href="./AnimTAB/">Animated TAB</a></li>
-            </ul>
-          </li>
-          <li><a href="./CircleGen/">Circle Generator</a></li>
-          <li><a href="#">Coming Soon</a></li>
-          <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
-          <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
-        </ul>
-      </div>
-    </nav>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>EasyMC - A Minecraft Multitool</title>
+        <link rel="shortcut icon" href="./assets/images/emc.png" type="image/x-icon">
+        <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./style.css">
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">EasyMC</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="./Hexnicks/">RGB Nicknames</a></li>
+                            <li><a href="./AnimTAB/">Animated TAB</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="./CircleGen/">Circle Generator</a></li>
+                    <li><a href="#">Coming Soon</a></li>
+                    <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></li>
+                    <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></li>
+                </ul>
+            </div>
+        </nav>
     </head>
-    <body>
-    </body>
-    </html>
+</html>
