add actual content to home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./assets/js/typer.js"></script>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -27,6 +28,18 @@
       </div>
     </nav>
     </head>
-    <body>
+    <body onload="typeWriter()">
+      <div>
+        <center id="title">EasyMC</center>
+        <center id="description">
+          <h1> Minecraft multitool for</h1>
+          <h1 id="typing"></h1>
+          <br>💖 Considering donating if this helped you:<br>
+          <a href="https://ko-fi.com/N4N550HUP"> <img src="https://ko-fi.com/img/githubbutton_sm.svg"></a>
+          <br><br>
+        </center>
+      </div>
+      
     </body>
+    <script type="text/javascript" src="./script.js"></script>
     </html>
