--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <link rel="shortcut icon" href="./assets/images/emc.png" type="image/x-icon">
-    <title>EasyMC</title>
+    <title>EasyMC - A Minecraft Multitool</title>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
