--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -19,7 +19,8 @@
     <ul class="nav navbar-nav">
       <li><a href="../">Home</a></li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+           aria-expanded="true">Gradients <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li class="active"><a href="#">RGB Nicknames</a></li>
           <li><a href="../AnimTAB/">Animated TAB</a></li>
@@ -60,8 +61,9 @@
               <label for="outputText" style="font-weight: normal;">This is what you put in the
                 animations.yml. Click on it to copy.</label>
               <pre id="outputText"
-                   onclick="copyTextToClipboard(this.textContent);"></pre>
-              <p id="error">TAB only allows the change-interval to be divisible by 50, Your number has been rounded up</p>
+                   onclick="copyTextToClipboard(this.innerText);"></pre>
+              <p id="error">TAB only allows the change-interval to be divisible by 50, Your number has been rounded
+                up</p>
             </div>
           </div>
           <div class="row">
@@ -78,11 +80,10 @@
           <div class="row">
             <div class="col-md-3" style="padding-left: 0;">
               <label for="animation-speed">Animation Speed</label>
-              <input id="animation-speed"
-                      class="form-control"
-                      value="50"
-                      oninput="updateOutputText(event);">
-              </input>
+              <input id="animation-speed" class="form-control"
+                     style="width: 75px;"
+                     type="number" min="50" max="9999" step="50" value="50"
+                     oninput="updateOutputText(event);" />
             </div>
           </div>
           <div class="row">
