--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -1,6 +1,11 @@
 <html lang="en">
 
 <head>
+  <meta content="SimplyMC" property="og:title" />
+  <meta content="Minecraft multitool for everyone" property="og:description" />
+  <meta content="https://www.simplymc.art/" property="og:url" />
+  <meta content="https://www.simplemc.art/assets/images/emc.png" property="og:image" />
+  <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
@@ -14,7 +19,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">EasyMC</a>
+      <a class="navbar-brand" href="#">SimplyMC</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="../">Home</a></li>
@@ -22,13 +27,13 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
            aria-expanded="true">Gradients <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li class="active"><a href="#">RGB Nicknames</a></li>
-          <li><a href="../AnimTAB/">Animated TAB</a></li>
+          <li><a href="../AnimTAB/">RGB Nicknames</a></li>
+          <li class="active"><a href="#">Animated TAB</a></li>
         </ul>
       </li>
       <li><a href="../CircleGen/">Circle Generator</a></li>
       <li><a href="#">Coming Soon</a></li>
-      <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+      <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
       <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
     </ul>
   </div>
@@ -73,7 +78,7 @@
             <div class="col-md-3" style="padding-left: 0;">
               <label for="animationText">Animation Text</label>
               <input class="form-control" id="animationText" type="text" maxlength="100" placeholder="Your Text"
-                     value="EasyMC" oninput="javascript: onUserInput()"
+                     value="SimplyMC" oninput="javascript: onUserInput()"
                      onchange="javascript: onUserInput()">
             </div>
           </div>
