--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <meta content="SimplyMC" property="og:title" />
+  <meta content="Minecraft multitool for everyone" property="og:description" />
+  <meta content="https://www.simplymc.art/" property="og:url" />
+  <meta content="https://www.simplemc.art/assets/images/emc.png" property="og:image" />
+  <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
@@ -19,7 +24,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">EasyMC</a>
+        <a class="navbar-brand" href="#">SimplyMC</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="../index.html">Home</a></li>
