--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <head>
+    <meta content="SimplyMC" property="og:title" />
+    <meta content="Minecraft multitool for everyone" property="og:description" />
+    <meta content="https://www.simplymc.art/" property="og:url" />
+    <meta content="https://www.simplemc.art/assets/images/emc.png" property="og:image" />
+    <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
     <link rel="shortcut icon" href="./assets/images/emc.png" type="image/x-icon">
-    <title>EasyMC - A Minecraft Multitool</title>
+    <title>SimplyMC - A Minecraft Multitool</title>
     <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -9,7 +14,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">EasyMC</a>
+          <a class="navbar-brand" href="#">SimplyMC</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
@@ -22,7 +27,7 @@
           </li>
           <li><a href="./CircleGen/">Circle Generator</a></li>
           <li><a href="#">Coming Soon</a></li>
-          <li><a href="https://github.com/Oli-idk/EasyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
+          <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
           <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
         </ul>
       </div>
@@ -30,7 +35,7 @@
     </head>
     <body onload="typeWriter()">
       <div>
-        <center id="title">EasyMC</center>
+        <center id="title">SimplyMC</center>
         <center id="description">
           <h1> Minecraft multitool for</h1>
           <h1 id="typing"></h1>
