dumb stupid spelling error

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <center id="description">
           <h1> Minecraft multitool for</h1>
           <h1 id="typing"></h1>
-          <br>💖 Considering donating if this helped you:<br>
+          <br>💖 Consider donating if this helped you:<br>
           <a href="https://ko-fi.com/N4N550HUP"> <img src="https://ko-fi.com/img/githubbutton_sm.svg"></a>
           <br><br>
         </center>
