Add missing title and links

--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -6,18 +6,19 @@
   <meta content="https://www.simplymc.art/" property="og:url" />
   <meta content="https://www.simplemc.art/assets/images/emc.png" property="og:image" />
   <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
-    <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
-<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools.js"></script>
-<script src="Base64.js"></script>
-<script src="range-polyfill.js"></script>
-<script src="number-polyfill.js"></script>
-<script src="renderers/svg.js"></script>
-<script src="renderers/table.js"></script>
-<script src="FileSaver.js"></script>
-<script src="Blob.js"></script>
-<script src="generator.js"></script>
+  <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
+  <title>Circle Generator</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.2/mootools.js"></script>
+  <script src="Base64.js"></script>
+  <script src="range-polyfill.js"></script>
+  <script src="number-polyfill.js"></script>
+  <script src="renderers/svg.js"></script>
+  <script src="renderers/table.js"></script>
+  <script src="FileSaver.js"></script>
+  <script src="Blob.js"></script>
+  <script src="generator.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,8 @@
         <li><a href="../AnimTAB/">Animated TAB</a></li>
         <li class="active"><a href="#">Circle Generator</a></li>
         <li><a href="#">Coming Soon</a></li>
+        <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></li>
+        <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></li>
       </ul>
     </div>
   </nav>
