--- a/Hexnicks/index.html
+++ b/Hexnicks/index.html
@@ -33,8 +33,8 @@
       </li>
       <li><a href="../CircleGen/">Circle Generator</a></li>
       <li><a href="#">Coming Soon</a></li>
-      <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></a></li>
-      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></a></li>
+      <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></li>
+      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></li>
     </ul>
   </div>
 </nav>
