--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -22,22 +22,27 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">SimplyMC</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../Hexnicks/">RGB Nicknames</a></li>
-        <li><a href="../AnimTAB/">Animated TAB</a></li>
-        <li class="active"><a href="#">Circle Generator</a></li>
-        <li><a href="#">Coming Soon</a></li>
-        <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></li>
-        <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></li>
-      </ul>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">SimplyMC</a>
     </div>
-  </nav>
+    <ul class="nav navbar-nav">
+      <li><a href="../">Home</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">RGB Nicknames</a></li>
+          <li><a href="../AnimTAB/">Animated TAB</a></li>
+        </ul>
+      </li>
+      <li><a class="active" href="../CircleGen/">Circle Generator</a></li>
+      <li><a href="#">Coming Soon</a></li>
+      <li><a href="https://github.com/Oli-idk/SimplyMC"><img src="/assets/images/github.png" height="20px"></a></li>
+      <li><a href="https://discord.akiradev.xyz"><img src="/assets/images/discord.png" height="20px"></a></li>
+    </ul>
+  </div>
+</nav>
 <noscript><strong>Circle generator requires JavaScript to be turned on!</strong><br /></noscript>
 Width :
 <input tabindex="1" type="number" size="5" id="diameter" value="9" autocomplete="off" autofocus="autofocus">
