Wrap everything in content div

--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -43,29 +43,30 @@
     </ul>
   </div>
 </nav>
-<noscript><strong>Circle generator requires JavaScript to be turned on!</strong><br /></noscript>
-Width :
-<input tabindex="1" type="number" size="5" id="diameter" value="9" autocomplete="off" autofocus="autofocus">
-<label><input id="linked" type="checkbox" checked="checked" value="1" /> Force Circle</label>
-&mdash;
-Block Count: <span id="blockcount"></span><br />
-Height:
-<input tabindex="2" type="number" size="5" id="height" value="9" autocomplete="off" autofocus="autofocus">
-<select id="thickness">
-	<option selected="selected">thick</option>
-	<option>thin</option>
-	<option>filled</option>
-</select>
+<div id="content">
+	<noscript><strong>Circle generator requires JavaScript to be turned on!</strong><br /></noscript>
+	Width :
+	<input tabindex="1" type="number" size="5" id="diameter" value="9" autocomplete="off" autofocus="autofocus">
+	<label><input id="linked" type="checkbox" checked="checked" value="1" /> Force Circle</label>
+	&mdash;
+	Block Count: <span id="blockcount"></span><br />
+	Height:
+	<input tabindex="2" type="number" size="5" id="height" value="9" autocomplete="off" autofocus="autofocus">
+	<select id="thickness">
+		<option selected="selected">thick</option>
+		<option>thin</option>
+		<option>filled</option>
+	</select>
 
-Download:
-<button type="button" id="downloadSVG">SVG</button>
-<button type="button" id="downloadPNG">PNG</button>
-<br />
-Scale :
-<input type="range" min="50" max="3000" value="720" id="scaler" data-poly-scale=".1" />
-<br />
+	Download:
+	<button type="button" id="downloadSVG">SVG</button>
+	<button type="button" id="downloadPNG">PNG</button>
+	<br />
+	Scale :
+	<input type="range" min="50" max="3000" value="720" id="scaler" data-poly-scale=".1" />
+	<br />
 
-<div id="result"></div>
-
+	<div id="result"></div>
+</div>
 </body>
 </html>
