Fix dropdown button not working

--- a/CircleGen/index.html
+++ b/CircleGen/index.html
@@ -7,6 +7,8 @@
   <meta content="https://www.simplemc.art/assets/images/emc.png" property="og:image" />
   <meta content="#9C0000" data-react-helmet="true" name="theme-color" />
   <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="/assets/images/emc.png" type="image/x-icon">
   <title>Circle Generator</title>
@@ -32,7 +34,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">RGB Nicknames</a></li>
+          <li><a href="../Hexnicks/">RGB Nicknames</a></li>
           <li><a href="../AnimTAB/">Animated TAB</a></li>
         </ul>
       </li>
