--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -27,7 +27,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
            aria-expanded="true">Gradients <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="../AnimTAB/">RGB Nicknames</a></li>
+          <li><a href="../Gradients/">Hex Gradients</a></li>
           <li class="active"><a href="#">Animated TAB</a></li>
         </ul>
       </li>
