--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Gradients <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="./Hexnicks/">RGB Nicknames</a></li>
+              <li><a href="Gradients/">Hex Gradients</a></li>
               <li><a href="./AnimTAB/">Animated TAB</a></li>
             </ul>
           </li>
