Don't show the output length error for certain formats

--- a/Gradients/index.html
+++ b/Gradients/index.html
@@ -67,8 +67,7 @@
                 chat. Click on it to copy.</label>
               <pre id="outputText"
                    onclick="copyTextToClipboard(this.textContent);"></pre>
-              <p id="error">This is more than 256 characters and may not fit
-                in the chat box. You may ignore this if you're using a server console.</p>
+              <p id="error">This is more than 256 characters and may not fit in the chat box.</p>
             </div>
           </div>
           <div class="row">
