fix animation being named coloredNick

--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="row">
-            <div id="coloredNick"></div>
+            <div id="animation"></div>
           </div>
           <div class="row">
             <div class="col-md-3" style="padding-left: 0;">
