i missspelled unfinished lol

--- a/AnimTAB/index.html
+++ b/AnimTAB/index.html
@@ -90,7 +90,7 @@
                       onchange="updateOutputText(event);">
                 <option value='0'>Normal (left -> right)</option>
                 <option value='1'>Reverse (right -> left)</option>
-                <option value='2'>Bouncing (UNFISHED)</option>
+                <option value='2'>Bouncing (UNFINISHED)</option>
                 <option value='3'>Full text cycle (UNFINISHED)</option>
               </select>
             </div>
